--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
     <thead>
       <tr>
         <th>Dates</th>
+        <th>Course</th>
         <th>Institute</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>2012-2015</td>
+        <td>Técnico em Eletrônica</td>
         <td>Instituto Federal de São Paulo</td>
       </tr>
       <tr>
         <td>2016-2019</td>
+        <td>Engenharia Elétrica - Ênfase em Eletrônica e Sistemas</td>
         <td>Universidade de São Paulo</td>
       </tr>
     </tbody>
