--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>My personal blog</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body style="">
   <h1>Isabella Bologna</h1>
   <img
     src="https://scontent.fgru5-1.fna.fbcdn.net/v/t31.0-8/s960x960/13323818_1116963435009281_2413095071244567556_o.jpg?_nc_cat=106&_nc_ohc=9CXnQVmOeVoAQkb1CiL5pRF_MPbDBH7qw2GQo5tiiv5PF8xl8ZnAY3cXg&_nc_ht=scontent.fgru5-1.fna&oh=ddf552e0eaeca6b7e8bb40c870aee4af&oe=5E6EDA3A"
@@ -17,7 +18,7 @@
   <p>I'm a student of Electronic's Engineering at University of Sao Paulo. I like to make my own projects, from hardware
     to software. </p>
   <hr>
-  <h3>Education</h3>
+  <h2>Education</h2>
   <table cellspacing="10">
     <thead>
       <tr>
@@ -29,7 +30,7 @@
     <tbody>
       <tr>
         <td>2012-2015</td>
-        <td>Técnico em Eletrônica</td>
+        <td>Técnico em Eletrônica Integrado ao Ensino Médio</td>
         <td>Instituto Federal de São Paulo</td>
       </tr>
       <tr>
@@ -41,15 +42,15 @@
   </table>
 
   <hr>
-  <h3><a href="hobbies.html">Hobbies</a></h3>
+  <h2><a href="hobbies.html">Hobbies</a></h2>
   <ol>
     <li><a href="https://www.thunderatz.org">Robots</a></li>
     <li>Program</li>
-    <li>Play</li>
+    <li>Watch Series</li>
   </ol>
 
   <hr>
-  <h3>Skills</h3>
+  <h2>Skills</h2>
   <table cellspacing="10">
     <tbody>
       <tr>
@@ -71,6 +72,10 @@
       <tr>
         <td>HTML</td>
         <td>⭐⭐</td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td></td>
       </tr>
     </tbody>
   </table>
