Include CSS skills

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </tr>
       <tr>
         <td>CSS</td>
-        <td></td>
+        <td>⭐</td>
       </tr>
     </tbody>
   </table>
@@ -83,6 +83,8 @@
 <p>
   <a href="contact-me.html">Contact me</a>
 </p>  
+
+<footer>copyright</footer>
 </body>
 
 </html>
