--- a/index.html
+++ b/index.html
@@ -1,90 +1,93 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="pt-br" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>My personal blog</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>My personal blog</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
+  <body style="">
+    <h1>Isabella Bologna Salomão</h1>
+    <img
+      src="https://avatars.githubusercontent.com/u/20494654?v=4"
+      alt="my photo"
+      height="200"
+    />
+    <p>
+      <em>Embedded Engineer</em> at <a href="https://www.tembici.com.br/pt/">Tembici</a>
+      <!-- <a href="https://www.omni-electronica.com.br/">Omni Electronica</a> and
+      <a href="http://www.epistemic.com.br/">Epistemic</a> -->
+    </p>
+    <p>
+      Engenheira eletrônica com experiência de X anos com desenvolvimento de software e hardware para sistemas embarcados.
+    </p>
+    <hr />
+    <h2>Formação Acadêmica</h2>
+    <table cellspacing="10">
+      <thead>
+        <tr>
+          <th>Datas</th>
+          <th>Curso</th>
+          <th>Instituição</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2016-2021</td>
+          <td>Engenharia Elétrica - Ênfase em Eletrônica e Sistemas Computacionais</td>
+          <td>Escola Politécnica da Universidade de São Paulo (POLI-USP)</td>
+        </tr>
+        <tr>
+          <td>2012-2015</td>
+          <td>Técnico em Eletrônica Integrado ao Ensino Médio</td>
+          <td>Instituto Federal de São Paulo</td>
+        </tr>
+      </tbody>
+    </table>
 
-<body style="">
-  <h1>Isabella Bologna</h1>
-  <img
-    src="https://scontent.fgru5-1.fna.fbcdn.net/v/t31.0-8/s960x960/13323818_1116963435009281_2413095071244567556_o.jpg?_nc_cat=106&_nc_ohc=9CXnQVmOeVoAQkb1CiL5pRF_MPbDBH7qw2GQo5tiiv5PF8xl8ZnAY3cXg&_nc_ht=scontent.fgru5-1.fna&oh=ddf552e0eaeca6b7e8bb40c870aee4af&oe=5E6EDA3A"
-    alt="my photo" height="200">
-  <p><em>Embedded Engineer at <a href="https://www.omni-electronica.com.br/">Omni Electronica</a> and 
-     <a href="http://www.epistemic.com.br/">Epistemic</a></em></p>
-  <!-- Use em instead of i, i is only style -->
-  <p>I'm a student of Electronic's Engineering at University of Sao Paulo. I like to make my own projects, from hardware
-    to software. </p>
-  <hr>
-  <h2>Education</h2>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Course</th>
-        <th>Institute</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2012-2015</td>
-        <td>Técnico em Eletrônica Integrado ao Ensino Médio</td>
-        <td>Instituto Federal de São Paulo</td>
-      </tr>
-      <tr>
-        <td>2016-2019</td>
-        <td>Engenharia Elétrica - Ênfase em Eletrônica e Sistemas</td>
-        <td>Universidade de São Paulo</td>
-      </tr>
-    </tbody>
-  </table>
+    <hr />
+    <h2><a href="hobbies.html">Hobbies</a></h2>
+    <ol>
+      <li><a href="https://www.thunderatz.org">Robots</a></li>
+      <li>Crochet</li>
+      <li>Books</li>
+    </ol>
 
-  <hr>
-  <h2><a href="hobbies.html">Hobbies</a></h2>
-  <ol>
-    <li><a href="https://www.thunderatz.org">Robots</a></li>
-    <li>Program</li>
-    <li>Watch Series</li>
-  </ol>
+    <hr />
+    <h2>Skills</h2>
+    <table cellspacing="10">
+      <tbody>
+        <tr>
+          <td>C language</td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>C++</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Hardware Design</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Python</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>HTML</td>
+          <td>⭐⭐</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+          <td>⭐</td>
+        </tr>
+      </tbody>
+    </table>
 
-  <hr>
-  <h2>Skills</h2>
-  <table cellspacing="10">
-    <tbody>
-      <tr>
-        <td>C language</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>C++</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Hardware Design</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Python</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>HTML</td>
-        <td>⭐⭐</td>
-      </tr>
-      <tr>
-        <td>CSS</td>
-        <td>⭐</td>
-      </tr>
-    </tbody>
-  </table>
+    <p>
+      <a href="contact-me.html">Contact me</a>
+    </p>
 
-<p>
-  <a href="contact-me.html">Contact me</a>
-</p>  
-
-<footer>copyright</footer>
-</body>
-
+    <footer>copyright</footer>
+  </body>
 </html>
